# audio-glitch-detector

./: .gitignore  README.md  SineDetectDiscont.py  analyse.py  detect.py  detect_discont_wav.py  detect_discontinuities_file.py  detect_discontinuities_stream.py  detect_discontinuity.py  list_devices.py  pyproject.toml  requirements.txt  rich_text_test.py  stream_app_test.py  wav_test.py  wave_test.py
_detector/: __init__.py  detect_discont_realtime.py  detect_discontinuities.py
audio_glitch_detector/: __init__.py  cli.py  file_mode.py  stream_mode.py
audio_glitch_detector/audio/: __init__.py  block_saver.py  file_reader.py  stream_reader.py
audio_glitch_detector/core/: __init__.py  analysis.py  detector.py
audio_glitch_detector/detectors/: __init__.py  detector_file.py  detector_stream.py
audio_glitch_detector/readers/: __init__.py
audio_glitch_detector/tui/: console_output.py
audio_glitch_detector/utils/: __init__.py  audio_format.py  audio_meter.py  chunk2wav.py  rich_output.py  utils.py
detectors/: __init__.py  detect_discontinuity_file.py  detect_discontinuity_realtime.py  detect_discontinuity_stream.py  detector_file.py  detector_stream.py  dsp.py
detectors/utils/: __init__.py  utils.py
discontinuity_detector/: cli.py
discontinuity_detector/detectors/: detector_file.py  detector_stream.py
discontinuity_detector/utils/: __init__.py  audio_meter.py
tests/: test_detection.py
tests/test_audio/: test_file_reader.py
tests/test_core/: test_detector.py
utils/: __init__.py  audio_devices.py  audio_format.py  audio_meter.py  chunk2wav.py  key_input.py  rich_output.py  terminal.py  utils.py
